--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <!-- Files will be listed here -->
     </ul>
 
-    <script>
-        // JavaScript to fetch and display the files will go here
-    </script>
+    <script src="fetch_repo_files.js"></script>
 </body>
 </html>
