--- a/index.html
+++ b/index.html
@@ -3,6 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Repository File List</title>
+    <style>
+body {
+    font-family: Arial, sans-serif;
+    background-color: white;
+    color: #333;
+    text-align: center;
+}
+
+h1 {
+    color: #333;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    background-color: #f9f9f9;
+    margin: 5px 0;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    text-align: left;
+}
+
+a {
+    text-decoration: none;
+    color: #007bff;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+#nameModal {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+    </style>
 </head>
 <body>
     <h1>Files in My Repository</h1>
@@ -10,6 +58,17 @@
         <!-- Files will be listed here -->
     </ul>
 
+    <!-- Modal for naming files -->
+    <div id="nameModal" style="display:none;">
+        <label for="fileName">Name for the file:</label>
+        <input type="text" id="fileName" name="fileName">
+        <button onclick="saveName()">Save</button>
+        <button onclick="closeModal()">Cancel</button>
+    </div>
+
     <script src="fetch_repo_files.js"></script>
+    <script>
+        // Additional JavaScript for naming feature
+    </script>
 </body>
 </html>
