--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: white;
+            background-image: url('your-background-image.jpg'); /* Add your desired background image URL here */
+            background-size: cover;
             color: #333;
             text-align: center;
         }
@@ -21,7 +22,7 @@
         }
 
         li {
-            background-color: #f9f9f9;
+            background-color: rgba(249, 249, 249, 0.8); /* semi-transparent background */
             margin: 5px 0;
             padding: 10px;
             border: 1px solid #ddd;
@@ -44,7 +45,7 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.9); /* semi-transparent background */
             padding: 20px;
             border: 1px solid #ddd;
             border-radius: 4px;
