--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('your-background-image.jpg'); /* Add your desired background image URL here */
+            background-image: url('wallpaper.png'); /* Add your desired background image URL here */
             background-size: cover;
             color: #333;
             text-align: center;
