--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         a {
             text-decoration: none;
-            color: #1E90FF; /* Light blue color for links for better visibility */
+            color: white; /* Light blue color for links for better visibility */
         }
 
         a:hover {
