--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Repository File List</title>
+    <title>Sandbox</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <h1>Files in My Repository</h1>
+    <h1>View Projects</h1>
     <ul id="file-list">
         <!-- Files will be listed here -->
     </ul>
