--- a/Projects/Portfolio/website.html
+++ b/Projects/Portfolio/website.html
@@ -23,11 +23,11 @@
             <div class="social-links">
                 <!-- Social Media Links -->
                 <!-- Replace # with your actual social media links -->
-                <a href="#" class="social-link"><i class="fab fa-leetcode"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                <a href="https://leetcode.com/yourusername" class="social-link"><i class="fas fa-code"></i></a> <!-- Representing LeetCode -->
+                <a href="https://github.com/yourusername" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.youtube.com/channel/yourchannel" class="social-link"><i class="fab fa-youtube"></i></a>
+                <a href="https://twitter.com/yourusername" class="social-link"><i class="fab fa-twitter"></i></a>
+                <a href="https://instagram.com/yourusername" class="social-link"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </section>
