--- a/Projects/Portfolio/website.html
+++ b/Projects/Portfolio/website.html
@@ -8,31 +8,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <!-- Add other navigation items here -->
-            </ul>
-        </nav>
-    </header>
-
     <section id="home" class="full-screen-section">
         <div class="content">
             <h1>Your Name</h1>
             <div class="social-links">
                 <!-- Social Media Links -->
-                <!-- Replace # with your actual social media links -->
-                <a href="https://leetcode.com/yourusername" class="social-link"><i class="fas fa-code"></i></a> <!-- Representing LeetCode -->
-                <a href="https://github.com/yourusername" class="social-link"><i class="fab fa-github"></i></a>
-                <a href="https://www.youtube.com/channel/yourchannel" class="social-link"><i class="fab fa-youtube"></i></a>
-                <a href="https://twitter.com/yourusername" class="social-link"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/yourusername" class="social-link"><i class="fab fa-instagram"></i></a>
+                <a href="https://leetcode.com/agastyahukoo/" class="social-link"><i class="fas fa-code"></i></a> <!-- LeetCode -->
+                <a href="https://github.com/agastyahukoo" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="https://www.youtube.com/channel/UCIJBSQ_IzTNmpreVTqu5Yow" class="social-link"><i class="fab fa-youtube"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/agastyahukoo/" class="social-link"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </section>
 
-    <!-- Add more sections here -->
+    <section id="second-section" class="content-section">
+        <div class="content">
+            <h2>Title of Your Second Section</h2>
+            <p>This is some paragraph text for your second section. You can describe your projects, interests, or anything else relevant here.</p>
+            <div class="video-container">
+                <!-- Embedded YouTube Video -->
+                <iframe width="1280" height="720" src="https://www.youtube.com/embed/SBvSOrjzR7k" title="1. Two Sum (Leet Code)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <p>© 2024 Your Name</p>
