--- a/Projects/Portfolio/website.html
+++ b/Projects/Portfolio/website.html
@@ -10,7 +10,7 @@
 <body>
     <section id="home" class="full-screen-section">
         <div class="content">
-            <h1><span id="typing">Your Name</span></h1>
+<h1><span id="typing"></span></h1>
             <div class="social-links">
                 <!-- Social Media Links -->
                 <a href="https://leetcode.com/agastyahukoo/" class="social-link"><i class="fas fa-code"></i></a> <!-- LeetCode -->
