--- a/Projects/Portfolio/website.html
+++ b/Projects/Portfolio/website.html
@@ -13,7 +13,7 @@
             <h1><span id="typing"></span></h1>
             <div class="social-links">
                 <!-- Social Media Links -->
-                <a href="https://leetcode.com/agastyahukoo/" class="social-link"><i class="fas fa-code"></i></a> <!-- LeetCode -->
+                <a href="https://leetcode.com/agastyahukoo/" class="social-link"><i class="fas fa-code"></i></a>
                 <a href="https://github.com/agastyahukoo" class="social-link"><i class="fab fa-github"></i></a>
                 <a href="https://www.youtube.com/channel/UCIJBSQ_IzTNmpreVTqu5Yow" class="social-link"><i class="fab fa-youtube"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
@@ -22,13 +22,13 @@
         </div>
     </section>
 
-    <section id="second-section" class="content-section">
+    <section id="second-section" class="content-section hidden">
         <div class="content">
             <h2>Title of Your Second Section</h2>
             <p>This is some paragraph text for your second section. You can describe your projects, interests, or anything else relevant here.</p>
             <div class="video-container">
                 <!-- Embedded YouTube Video -->
-                <iframe width="1280" height="720" src="https://www.youtube.com/embed/SBvSOrjzR7k" title="1. Two Sum (Leet Code)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SBvSOrjzR7k" title="1. Two Sum (Leet Code)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </section>
