--- a/Projects/Portfolio/website.html
+++ b/Projects/Portfolio/website.html
@@ -6,10 +6,12 @@
     <title>Your Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
 <body>
-    <section id="home" class="full-screen-section">
-        <div class="content">
+<section id="home" class="full-screen-section">
+    <div id="particles-js"></div> <!-- Container for particles -->
+    <div class="content">
             <h1><span id="typing"></span></h1>
             <div class="social-links">
                 <!-- Social Media Links -->
