--- a/index.html
+++ b/index.html
@@ -12,36 +12,47 @@
         }
 
         body {
-            font-family: 'Helvetica Neue', Arial, sans-serif; /* Professional font choice */
-            background-color: #f4f4f4; /* Light grey background for a clean look */
-            color: #333; /* Dark grey text for readability */
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #1a1a1a; /* Dark background for the body */
+            color: #f0f0f0; /* Light grey text for contrast */
             line-height: 1.6;
-            padding: 20px;
+            margin: 0;
+        }
+
+        .header {
+            background-image: url('wallpaper.png'); /* Background image strip */
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 150px; /* Adjust height as needed */
+            width: 100%;
         }
 
         h1 {
-            margin-bottom: 20px;
-            color: #444; /* Dark shade for heading */
             text-align: center;
+            color: #fff; /* White color for heading */
+            padding-top: 50px; /* Adjust as needed for alignment */
+        }
+
+        .content {
+            padding: 20px;
         }
 
         ul {
             list-style-type: none;
-            padding: 0;
         }
 
         li {
-            background-color: #fff; /* White background for list items */
+            background-color: #262626; /* Slightly lighter dark shade for list items */
             margin: 10px 0;
             padding: 15px;
-            border: 1px solid #ddd; /* Light border for subtle separation */
+            border: 1px solid #333;
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         a {
             text-decoration: none;
-            color: #0066cc; /* Professional blue for links */
+            color: #4da6ff; /* Soft blue for links */
         }
 
         a:hover {
@@ -54,52 +65,57 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            background-color: #fff; /* White modal background */
+            background-color: #262626;
             padding: 20px;
-            border: 1px solid #ddd; /* Light border */
+            border: 1px solid #333;
             border-radius: 5px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); /* Deeper shadow for modal */
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
         label {
-            color: #333; /* Consistent text color */
-            margin-bottom: 10px;
+            color: #f0f0f0;
             display: block;
+            margin-bottom: 10px;
         }
 
         input, button {
             padding: 10px;
             margin: 10px 0;
             border-radius: 4px;
-            border: 1px solid #ddd;
+            border: 1px solid #333;
             width: 100%;
+            background: #333;
+            color: #f0f0f0;
         }
 
         button {
-            background-color: #0066cc; /* Blue background for buttons */
-            color: white;
+            background-color: #4da6ff;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
 
         button:hover {
-            background-color: #0056b3; /* Slightly darker on hover */
+            background-color: #3991cc;
         }
 
     </style>
 </head>
 <body>
-    <h1>View Projects</h1>
-    <ul id="file-list">
-        <!-- Files will be listed here -->
-    </ul>
+    <div class="header">
+        <h1>View Projects</h1>
+    </div>
+    <div class="content">
+        <ul id="file-list">
+            <!-- Files will be listed here -->
+        </ul>
 
-    <!-- Modal for naming files -->
-    <div id="nameModal">
-        <label for="fileName">Name for the file:</label>
-        <input type="text" id="fileName" name="fileName">
-        <button onclick="saveName()">Save</button>
-        <button onclick="closeModal()">Cancel</button>
+        <!-- Modal for naming files -->
+        <div id="nameModal">
+            <label for="fileName">Name for the file:</label>
+            <input type="text" id="fileName" name="fileName">
+            <button onclick="saveName()">Save</button>
+            <button onclick="closeModal()">Cancel</button>
+        </div>
     </div>
 
     <script src="fetch_repo_files.js"></script>
