--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
             background-color: #1a1a1a; /* Dark background for the body */
             color: #f0f0f0; /* Light grey text for contrast */
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .header {
             background-image: url('wallpaper.png'); /* Background image for the header */
             background-size: cover;
             background-repeat: no-repeat;
-            height: 250px; /* Increased height for the header strip */
+            height: 300px; /* Further increased height for the header strip */
             width: 100%;
             display: flex;
             justify-content: center;
@@ -31,14 +34,33 @@
 
         h1 {
             color: #fff; /* White color for heading */
-            font-size: 2.5em; /* Larger font size for the title */
+            font-size: 3em; /* Larger font size for the title */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow for depth */
         }
 
-        .content {
+        .main-content {
+            display: flex;
+            width: 100%;
+            max-width: 1200px; /* Max width for the main content */
+            margin: 20px;
+        }
+
+        .sidebar {
+            background-color: #262626; /* Dark background for sidebars */
             padding: 20px;
-            max-width: 800px; /* Max width for content */
-            margin: 0 auto; /* Centering content */
+            margin: 0 10px;
+            flex: 1;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .content {
+            flex: 2;
+            padding: 20px;
+            background-color: #333; /* Slightly different background for distinction */
+            margin: 0 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         ul {
@@ -46,12 +68,11 @@
         }
 
         li {
-            background-color: #262626; /* Slightly lighter dark shade for list items */
+            background-color: #262626; /* Consistent with sidebar */
             margin: 10px 0;
             padding: 15px;
             border: 1px solid #333;
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         a {
@@ -63,6 +84,12 @@
             text-decoration: underline;
         }
 
+        .sidebar h2 {
+            color: #fff; /* White color for sidebar titles */
+            margin-bottom: 10px;
+        }
+
+        /* Modal Style */
         #nameModal {
             display: none;
             position: fixed;
@@ -76,20 +103,18 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
-        label {
-            color: #f0f0f0;
+        label, input, button {
             display: block;
+            width: 100%;
             margin-bottom: 10px;
         }
 
         input, button {
             padding: 10px;
-            margin: 10px 0;
             border-radius: 4px;
             border: 1px solid #333;
             background: #333;
             color: #f0f0f0;
-            width: 100%;
         }
 
         button {
@@ -108,18 +133,30 @@
     <div class="header">
         <h1>View Projects</h1>
     </div>
-    <div class="content">
-        <ul id="file-list">
-            <!-- Files will be listed here -->
-        </ul>
-
-        <!-- Modal for naming files -->
-        <div id="nameModal">
-            <label for="fileName">Name for the file:</label>
-            <input type="text" id="fileName" name="fileName">
-            <button onclick="saveName()">Save</button>
-            <button onclick="closeModal()">Cancel</button>
+    <div class="main-content">
+        <div class="sidebar">
+            <h2>Update Notes</h2>
+            <p>Latest updates and news about the project will be listed here.</p>
+            <!-- Additional content can be added here -->
         </div>
+        <div class="content">
+            <ul id="file-list">
+                <!-- Files will be listed here -->
+            </ul>
+        </div>
+        <div class="sidebar">
+            <h2>How to Use</h2>
+            <p>Instructions on how to use the repository and its contents.</p>
+            <!-- Additional content can be added here -->
+        </div>
+    </div>
+
+    <!-- Modal for naming files -->
+    <div id="nameModal">
+        <label for="fileName">Name for the file:</label>
+        <input type="text" id="fileName" name="fileName">
+        <button onclick="saveName()">Save</button>
+        <button onclick="closeModal()">Cancel</button>
     </div>
 
     <script src="fetch_repo_files.js"></script>
