--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .header {
-            background-image: url('wallpaper.png');
+            background-image: url('background.png');
             background-size: cover;
             background-repeat: no-repeat;
             height: 300px;
