--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow: hidden;
         }
 
         .header {
-            background-image: url('background.png');
+            background-image: url('wallpaper.png');
             background-size: cover;
             background-repeat: no-repeat;
             height: 350px;
@@ -118,21 +119,33 @@
             position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%) scale(1.1);
             width: 80%;
             height: 80%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.9);
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
             z-index: 1000;
             display: none;
+            opacity: 0;
+            transition: opacity 0.4s ease, transform 0.4s ease;
+        }
+
+        #sitePopup.visible {
+            display: block;
+            opacity: 1;
+            transform: translate(-50%, -50%) scale(1);
         }
 
         #popupContent {
             width: 100%;
             height: 95%;
             border: none;
+        }
+
+        .blur-background {
+            filter: blur(5px);
         }
 
         label, input, button {
