--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         .header {
-            background-image: url('wallpaper.png');
+            background-image: url('background.png');
             background-size: cover;
             background-repeat: no-repeat;
             height: 350px;
@@ -175,7 +175,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>View Projects</h1>
+        <h1></h1>
     </div>
     <div class="welcome-box">
         Welcome to the Sandbox Repository! Explore the projects and files below.
