--- a/index.html
+++ b/index.html
@@ -38,29 +38,30 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
-        .main-content {
-            display: flex;
+        #main-container {
             width: 100%;
-            max-width: 1200px;
-            margin: 20px;
         }
 
-        .sidebar {
+        .main-content {
+            display: flex;
+            max-width: 1200px;
+            margin: 20px auto;
+        }
+
+        .sidebar, .content {
             background-color: #262626;
             padding: 20px;
             margin: 0 10px;
-            flex: 1;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         .content {
             flex: 2;
-            padding: 20px;
-            background-color: #333;
-            margin: 0 10px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .sidebar {
+            flex: 1;
         }
 
         ul {
@@ -68,10 +69,10 @@
         }
 
         li {
-            background-color: #262626;
+            background-color: #333;
             margin: 10px 0;
             padding: 15px;
-            border: 1px solid #333;
+            border: 1px solid #444;
             border-radius: 5px;
         }
 
@@ -82,11 +83,6 @@
 
         a:hover {
             text-decoration: underline;
-        }
-
-        .sidebar h2 {
-            color: #fff;
-            margin-bottom: 10px;
         }
 
         .welcome-box {
@@ -115,40 +111,34 @@
             background-color: #3991cc;
         }
 
-    #sitePopup {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-        height: 80%;
-        background-color: rgba(0, 0, 0, 0.8);
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-        z-index: 1000;
-        display: none;
-    }
-
-    #popupContent {
-        width: 100%;
-        height: 100%;
-        overflow: hidden; /* Ensure no scrollbars */
-    }
-
-    iframe {
-        width: 100%;
-        height: 100%;
-        border: none;
-    }
-
-        #sitePopup.visible {
-            display: block;
-            opacity: 1;
-            transform: translate(-50%, -50%) scale(1);
+        #sitePopup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            height: 80%;
+            background-color: rgba(0, 0, 0, 0.8);
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            display: none;
         }
 
-        .blur-background {
+        #popupContent {
+            width: 100%;
+            height: 95%;
+            overflow: hidden;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        #main-container.blur-background {
             filter: blur(5px);
         }
 
@@ -178,34 +168,34 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <h1></h1>
-    </div>
-    <div class="welcome-box">
-        Welcome to the Sandbox Repository! Explore the projects and files below.
-    </div>
-    <a href="#" class="back-button" id="backButton" style="display: none;">Back to Root</a>
-    <div class="main-content">
-        <div class="sidebar">
-            <h2>Update Notes</h2>
-            <p>Latest updates and news about the project will be listed here.</p>
+    <div id="main-container">
+        <div class="header">
+            <h1>View Projects</h1>
         </div>
-        <div class="content">
-            <ul id="file-list"></ul>
+        <div class="welcome-box">
+            Welcome to the Sandbox Repository! Explore the projects and files below.
         </div>
-        <div class="sidebar">
-            <h2>How to Use</h2>
-            <p>Instructions on how to use the repository and its contents.</p>
+        <a href="#" class="back-button" id="backButton" style="display: none;">Back to Root</a>
+        <div class="main-content">
+            <div class="sidebar">
+                <h2>Update Notes</h2>
+                <p>Latest updates and news about the project will be listed here.</p>
+            </div>
+            <div class="content">
+                <ul id="file-list"></ul>
+            </div>
+            <div class="sidebar">
+                <h2>How to Use</h2>
+                <p>Instructions on how to use the repository and its contents.</p>
+            </div>
         </div>
     </div>
-
     <div id="sitePopup">
         <div id="popupContent">
             <iframe id="siteFrame" src="" style="width:100%; height:100%;"></iframe>
         </div>
         <button onclick="closePopup()" style="position:absolute; top:10px; right:10px;">Close</button>
     </div>
-
     <script src="fetch_repo_files.js"></script>
 </body>
 </html>
