--- a/index.html
+++ b/index.html
@@ -165,6 +165,31 @@
         button:hover {
             background-color: #3991cc;
         }
+
+                .how-to-use {
+            color: #e0e0e0;
+            background-color: #2a2a2a;
+            border-left: 3px solid #4da6ff;
+            padding: 15px;
+            margin-top: 10px;
+            font-size: 0.9em;
+        }
+
+        .how-to-use h3 {
+            color: #fff;
+            margin-bottom: 5px;
+        }
+
+        .how-to-use ul {
+            list-style-type: disc;
+            list-style-position: inside;
+            margin-left: 20px;
+        }
+
+        .how-to-use li {
+            margin-bottom: 5px;
+        }
+        
     </style>
 </head>
 <body>
@@ -184,10 +209,26 @@
             <div class="content">
                 <ul id="file-list"></ul>
             </div>
-            <div class="sidebar">
-                <h2>How to Use</h2>
-                <p>Instructions on how to use the repository and its contents.</p>
-            </div>
+    <div class="sidebar">
+        <h2>How to Use</h2>
+        <div class="how-to-use">
+            <h3>Getting Started:</h3>
+            <ul>
+                <li>Browse through the list of HTML files in the 'View Projects' section.</li>
+                <li>Click on any file to open it in an interactive iframe.</li>
+            </ul>
+            <h3>Working on Projects:</h3>
+            <ul>
+                <li>Use the 'Back to Root' button to navigate back to the main file list.</li>
+                <li>Explore different HTML projects and edit them as needed.</li>
+            </ul>
+            <h3>Additional Tips:</h3>
+            <ul>
+                <li>Check the 'Update Notes' sidebar for the latest changes and news.</li>
+                <li>Utilize this sandbox environment to test and showcase HTML work.</li>
+            </ul>
+        </div>
+    </div>
         </div>
     </div>
     <div id="sitePopup">
