--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            overflow: hidden;
+            overflow: auto;
         }
 
         .header {
