--- a/Projects/Site/index.html
+++ b/Projects/Site/index.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="section" id="section1">Section 1</div>
-    <div class="section" id="section2">Section 2</div>
+    <div class="section" id="section1">
+        <div class="content">
+            <h1>Welcome to CodeChamp</h1>
+            <p>Challenge Your Coding Skills</p>
+            <button>Get Started</button>
+        </div>
+    </div>
+    <div class="section" id="section2">
+        <div class="content">
+            <h2>About CodeChamp</h2>
+            <p>This is a platform where you can test and improve your programming skills through various challenges and competitions.</p>
+        </div>
+    </div>
     <div class="section" id="section3">Section 3</div>
     <div class="section" id="section4">Section 4</div>
     <script src="script.js"></script>
