--- a/Projects/Portfolio/test.html
+++ b/Projects/Portfolio/test.html
@@ -15,6 +15,7 @@
         line-height: 1.6;
         color: #fff;
         background-color: #111;
+        overflow: hidden; /* Prevent horizontal scrollbar */
     }
 
     #particles-js {
@@ -122,6 +123,7 @@
     <p>© 2024 Your Name</p>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script>
     function typeWriter(element, text, speed) {
         let i = 0;
