--- a/Projects/Portfolio/test.html
+++ b/Projects/Portfolio/test.html
@@ -15,7 +15,6 @@
         line-height: 1.6;
         color: #fff;
         background-color: #111;
-        overflow: hidden; /* Prevent horizontal scrollbar */
     }
 
     #particles-js {
@@ -63,6 +62,7 @@
         text-align: center;
         opacity: 0;
         transition: opacity 2s ease-in-out;
+        min-height: 100vh; /* Ensure the section takes up the full viewport height */
     }
 
     .content-section.hidden {
@@ -152,11 +152,16 @@
         );
     }
 
-    document.addEventListener('scroll', function() {
+    function handleScroll() {
         const secondSection = document.getElementById('second-section');
         if (isInViewport(secondSection)) {
             secondSection.classList.add('visible');
         }
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        handleScroll();
+        window.addEventListener('scroll', handleScroll);
     });
 
     particlesJS('particles-js', {
