--- a/temp1.html
+++ b/temp1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Particle Background</title>
+    <title>Minimalistic Interactive Background</title>
     <style>
         body {
             margin: 0;
@@ -40,7 +40,7 @@
 <body>
     <div id="particles-js"></div>
     <div id="content">
-        <h1>Interactive Particle Background</h1>
+        <h1>Minimalistic Interactive Background</h1>
         <p>Move your mouse to interact with the background.</p>
     </div>
     
@@ -49,7 +49,7 @@
         particlesJS("particles-js", {
             particles: {
                 number: {
-                    value: 150, // Increase the number of particles
+                    value: 100, // Number of particles
                     density: {
                         enable: true,
                         value_area: 800
@@ -76,22 +76,18 @@
                     }
                 },
                 size: {
-                    value: 3, // Adjust the size of particles
+                    value: 3, // Size of particles
                     random: true,
                     anim: {
                         enable: false
                     }
                 },
                 line_linked: {
-                    enable: true,
-                    distance: 150, // Increase the distance between particles
-                    color: "#ffffff",
-                    opacity: 0.4,
-                    width: 1
+                    enable: false, // Disabling the lines between particles
                 },
                 move: {
                     enable: true,
-                    speed: 2, // Increase particle speed
+                    speed: 2, // Particle speed
                     direction: "none",
                     random: true,
                     straight: false,
@@ -109,23 +105,17 @@
                 events: {
                     onhover: {
                         enable: true,
-                        mode: "grab" // Change the interaction mode to "grab"
+                        mode: "repulse" // Interaction on hover with repulsion effect
                     },
                     onclick: {
-                        enable: true,
-                        mode: "push"
+                        enable: false, // Disabling click interaction
                     },
                     resize: true
                 },
                 modes: {
-                    grab: {
-                        distance: 200, // Increase the grab distance
-                        line_linked: {
-                            opacity: 0.7
-                        }
-                    },
-                    push: {
-                        particles_nb: 4
+                    repulse: {
+                        distance: 100, // Repulsion distance
+                        duration: 0.4
                     }
                 }
             },
