--- a/temp1.html
+++ b/temp1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fluid Motion Particle Background</title>
+    <title>Galaxy and Nebula Particle Background</title>
     <style>
         body {
             margin: 0;
@@ -14,7 +14,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: #000; /* Background color of the website */
+            background-color: #000; /* Dark background */
             z-index: -1;
         }
 
@@ -40,8 +40,8 @@
 <body>
     <div id="particles-js"></div>
     <div id="content">
-        <h1>Fluid Motion Particle Background</h1>
-        <p>Move your mouse to see the fluid motion effect.</p>
+        <h1>Galaxy and Nebula Particle Background</h1>
+        <p>Explore the cosmic wonders.</p>
     </div>
     
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -49,7 +49,7 @@
         particlesJS("particles-js", {
             particles: {
                 number: {
-                    value: 50, // Number of particles
+                    value: 80, // Number of particles
                     density: {
                         enable: true,
                         value_area: 800
@@ -76,18 +76,22 @@
                     }
                 },
                 size: {
-                    value: 2, // Size of particles
+                    value: 3, // Size of particles
                     random: true,
                     anim: {
                         enable: false
                     }
                 },
                 line_linked: {
-                    enable: false, // Disabling the lines between particles
+                    enable: true, // Enable lines connecting particles
+                    distance: 150, // Line distance
+                    color: "#ffffff",
+                    opacity: 0.4,
+                    width: 1
                 },
                 move: {
                     enable: true,
-                    speed: 1, // Particle speed
+                    speed: 2, // Particle speed
                     direction: "none",
                     random: true,
                     straight: false,
@@ -120,14 +124,6 @@
                 }
             },
             retina_detect: true
-        });
-
-        const particlesJSInstance = window.pJSDom[0].pJS;
-
-        document.addEventListener("mousemove", (event) => {
-            const { clientX, clientY } = event;
-            particlesJSInstance.interactivity.mouse.pos_x = clientX;
-            particlesJSInstance.interactivity.mouse.pos_y = clientY;
         });
     </script>
 </body>
