--- a/temp1.html
+++ b/temp1.html
@@ -112,7 +112,7 @@
                         mode: "repulse" // Interaction on hover with repulsion effect
                     },
                     onclick: {
-                        enable: false, // Disabling click interaction
+                        enable: true, // Disabling click interaction
                     },
                     resize: true
                 },
